--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="src/styles/header.css" />
     <link rel="stylesheet" href="src/styles/home.css" />
     <link rel="stylesheet" href="src/styles/menu.css" />
+    <link rel="stylesheet" href="src/styles/testimonials.css"/>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -137,6 +138,10 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
               <span>(500+)</span>
             </div>
 
@@ -230,6 +235,61 @@
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="testimonials">
+        <img src="src/images/chef.png" id="testimonials_chef" />
+
+        <div id="testimonials_content">
+          <h2 class="section-title">Avaliações</h2>
+          <h3 class="section-subtitle">O que os clientes falam sobre nós</h3>
+
+          <div id="feedbacks">
+            <div class="feedback">
+              <img src="src/images/avatar.png" class="feedback-avatar" />
+              <div class="feedback-content">
+                <p>
+                  Roberta Salomao
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </span>
+                  <p>
+                    "Qualidade e muito saboroso!"
+                  </p>
+                </p>
+              </div>
+            </div>
+
+            <div class="feedback">
+                <img src="src/images/avatar.png" class="feedback-avatar" />
+                <div class="feedback-content">
+                  <p>
+                    Roberta Salomao
+                    <span>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </span>
+                    <p>
+                      "Qualidade e muito saboroso!"
+                    </p>
+                  </p>
+                </div>
+              </div>
+
+              <button class="btn-default">
+                Ver mais avaliações
+              </button>
+
+            
           </div>
         </div>
       </section>
