--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="src/styles/styles.css" />
-    <link rel="stylesheet" href="src/styles/header.css" />
-    <link rel="stylesheet" href="src/styles/home.css" />
-    <link rel="stylesheet" href="src/styles/menu.css" />
-    <link rel="stylesheet" href="src/styles/testimonials.css"/>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -34,11 +30,9 @@
           <li class="nav-item active">
             <a href="#home">Início</a>
           </li>
-
           <li class="nav-item">
             <a href="#menu">Cardápio</a>
           </li>
-
           <li class="nav-item">
             <a href="#testimonials">Avaliações</a>
           </li>
@@ -56,11 +50,9 @@
           <li class="nav-item">
             <a href="#home">Início</a>
           </li>
-
           <li class="nav-item">
             <a href="#menu">Cardápio</a>
           </li>
-
           <li class="nav-item">
             <a href="#testimonials">Avaliações</a>
           </li>
@@ -73,7 +65,6 @@
     <main id="content">
       <section id="home">
         <div class="shape"></div>
-
         <div id="cta">
           <h1 class="title">
             O sabor que vai até
@@ -81,18 +72,18 @@
           </h1>
 
           <p class="description">
-            Lorem, ipsum dolor sit amet, consectetur, adipisicing elit. Nemo
-            laudantium
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
+            purus sit amet
           </p>
 
           <div id="cta_buttons">
-            <a href="#" class="btn-default"> Ver Cardápio </a>
+            <a href="#" class="btn-default"> Ver cardápio </a>
 
-            <a href="tel:+24998520501" id="phone_button">
+            <a href="tel:+55555555555" id="phone_button">
               <button class="btn-default">
                 <i class="fa-solid fa-phone"></i>
               </button>
-              (24) 998520501
+              (51) 92342-3243
             </a>
           </div>
 
@@ -128,15 +119,13 @@
 
             <img src="src/images/dish.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem ipsum</h3>
+            <h3 class="dish-title">Lorem Ipsum</h3>
 
-            <span class="dish-description"> Lorem ipsum dolor sit anmet </span>
+            <span class="dish-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
 
             <div class="dish-rate">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -146,7 +135,7 @@
             </div>
 
             <div class="dish-price">
-              <h4>R$39,90</h4>
+              <h4>R$20,00</h4>
               <button class="btn-default">
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
@@ -160,9 +149,11 @@
 
             <img src="src/images/dish2.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem ipsum</h3>
+            <h3 class="dish-title">Lorem Ipsum</h3>
 
-            <span class="dish-description"> Lorem ipsum dolor sit anmet </span>
+            <span class="dish-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
 
             <div class="dish-rate">
               <i class="fa-solid fa-star"></i>
@@ -174,7 +165,7 @@
             </div>
 
             <div class="dish-price">
-              <h4>R$39,90</h4>
+              <h4>R$20,00</h4>
               <button class="btn-default">
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
@@ -188,9 +179,11 @@
 
             <img src="src/images/dish3.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem ipsum</h3>
+            <h3 class="dish-title">Lorem Ipsum</h3>
 
-            <span class="dish-description"> Lorem ipsum dolor sit anmet </span>
+            <span class="dish-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
 
             <div class="dish-rate">
               <i class="fa-solid fa-star"></i>
@@ -202,7 +195,7 @@
             </div>
 
             <div class="dish-price">
-              <h4>R$39,90</h4>
+              <h4>R$20,00</h4>
               <button class="btn-default">
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
@@ -216,9 +209,11 @@
 
             <img src="src/images/dish4.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem ipsum</h3>
+            <h3 class="dish-title">Lorem Ipsum</h3>
 
-            <span class="dish-description"> Lorem ipsum dolor sit anmet </span>
+            <span class="dish-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
 
             <div class="dish-rate">
               <i class="fa-solid fa-star"></i>
@@ -230,7 +225,7 @@
             </div>
 
             <div class="dish-price">
-              <h4>R$39,90</h4>
+              <h4>R$20,00</h4>
               <button class="btn-default">
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
@@ -240,18 +235,19 @@
       </section>
 
       <section id="testimonials">
-        <img src="src/images/chef.png" id="testimonials_chef" />
+        <img src="src/images/chef.png" id="testimonial_chef" alt="" />
 
         <div id="testimonials_content">
-          <h2 class="section-title">Avaliações</h2>
+          <h2 class="section-title">Depoimentos</h2>
           <h3 class="section-subtitle">O que os clientes falam sobre nós</h3>
 
           <div id="feedbacks">
             <div class="feedback">
-              <img src="src/images/avatar.png" class="feedback-avatar" />
+              <img src="src/images/avatar.png" class="feedback-avatar" alt="" />
+
               <div class="feedback-content">
                 <p>
-                  Roberta Salomao
+                  Fulana de Tal
                   <span>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -259,42 +255,64 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                   </span>
-                  <p>
-                    "Qualidade e muito saboroso!"
-                  </p>
+                </p>
+                <p>
+                  "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Repellat voluptatibus cumque dolor ea est quae alias
+                  necessitatibus"
                 </p>
               </div>
             </div>
 
             <div class="feedback">
-                <img src="src/images/avatar.png" class="feedback-avatar" />
-                <div class="feedback-content">
-                  <p>
-                    Roberta Salomao
-                    <span>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                    </span>
-                    <p>
-                      "Qualidade e muito saboroso!"
-                    </p>
-                  </p>
-                </div>
+              <img src="src/images/avatar.png" class="feedback-avatar" alt="" />
+
+              <div class="feedback-content">
+                <p>
+                  Fulana de Tal
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </span>
+                </p>
+                <p>
+                  "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Repellat voluptatibus cumque dolor ea est quae alias
+                  necessitatibus"
+                </p>
               </div>
-
-              <button class="btn-default">
-                Ver mais avaliações
-              </button>
-
-            
+            </div>
           </div>
+
+          <button class="btn-default">Ver mais avaliações</button>
         </div>
       </section>
     </main>
 
+    <footer>
+      <img src="src/images/wave.svg" alt="" />
+
+      <div id="footer_items">
+        <span id="copyright"> &copy 2024 Larissa Kich </span>
+
+        <div class="social-media-buttons">
+          <a href="">
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+
+          <a href="">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+
+          <a href="">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
     <script src="src/javascript/script.js"></script>
   </body>
 </html>
