Foram realiazdas alterações no arquivo js afim de melhorar a eperiencia do usuario. Informações de produtos e nomes da pagina também foram alterados.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>Landing page</title>
+    <title>Food</title>
   </head>
   <body>
     <header>
@@ -72,8 +72,11 @@
           </h1>
 
           <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
-            purus sit amet
+            Bem-vindo ao nosso restaurante, onde sabor, qualidade e acolhimento
+            se encontram! Oferecemos uma experiência gastronômica única, com
+            pratos preparados com ingredientes frescos, selecionados com
+            cuidado, e um cardápio que combina o melhor da culinária tradicional
+            com toques contemporâneos.
           </p>
 
           <div id="cta_buttons">
@@ -119,10 +122,13 @@
 
             <img src="src/images/dish.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem Ipsum</h3>
+            <h3 class="dish-title">Yakisoba Tradicional Oriental</h3>
 
             <span class="dish-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Delicioso macarrão oriental salteado no wok com legumes frescos e
+              crocantes, tiras macias de carne bovina e frango, envoltos em um
+              molho especial à base de shoyu. Uma combinação equilibrada de
+              sabor, textura e tradição.
             </span>
 
             <div class="dish-rate">
@@ -135,7 +141,7 @@
             </div>
 
             <div class="dish-price">
-              <h4>R$20,00</h4>
+              <h4>R$29,90</h4>
               <button class="btn-default">
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
@@ -149,10 +155,12 @@
 
             <img src="src/images/dish2.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem Ipsum</h3>
+            <h3 class="dish-title">Misto da casa</h3>
 
             <span class="dish-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Sanduíche tradicional feito com pão macio, presunto e queijo
+              derretido, levemente tostado na chapa até atingir a crocância
+              perfeita. Simples, saboroso e ideal para qualquer momento do dia.
             </span>
 
             <div class="dish-rate">
@@ -179,10 +187,13 @@
 
             <img src="src/images/dish3.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem Ipsum</h3>
+            <h3 class="dish-title">Taça de Frutas com Iogurte Cremoso</h3>
 
             <span class="dish-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Camadas frescas de morangos e kiwis fatiados, combinadas com um
+              iogurte natural cremoso e levemente adocicado. Uma sobremesa leve,
+              refrescante e perfeita para quem busca equilíbrio entre sabor e
+              suavidade.
             </span>
 
             <div class="dish-rate">
@@ -195,7 +206,7 @@
             </div>
 
             <div class="dish-price">
-              <h4>R$20,00</h4>
+              <h4>R$19,00</h4>
               <button class="btn-default">
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
@@ -209,10 +220,13 @@
 
             <img src="src/images/dish4.png" class="dish-image" alt="" />
 
-            <h3 class="dish-title">Lorem Ipsum</h3>
+            <h3 class="dish-title">Yakisoba de Camarão ao Estilo Oriental</h3>
 
             <span class="dish-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Macarrão oriental salteado no wok com camarões selecionados,
+              legumes frescos e crocantes, tudo envolvido em um molho especial à
+              base de shoyu e temperos orientais. Um prato leve, aromático e
+              cheio de sabor do mar.
             </span>
 
             <div class="dish-rate">
@@ -225,7 +239,7 @@
             </div>
 
             <div class="dish-price">
-              <h4>R$20,00</h4>
+              <h4>R$39,00</h4>
               <button class="btn-default">
                 <i class="fa-solid fa-basket-shopping"></i>
               </button>
@@ -247,7 +261,7 @@
 
               <div class="feedback-content">
                 <p>
-                  Fulana de Tal
+                  Juliana M
                   <span>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -257,9 +271,9 @@
                   </span>
                 </p>
                 <p>
-                  "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Repellat voluptatibus cumque dolor ea est quae alias
-                  necessitatibus"
+                  "Comida deliciosa e atendimento impecável! O yakisoba de
+                  camarão é simplesmente incrível. Já virou meu lugar favorito
+                  para comer."
                 </p>
               </div>
             </div>
@@ -269,7 +283,7 @@
 
               <div class="feedback-content">
                 <p>
-                  Fulana de Tal
+                  Camilia R
                   <span>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -279,9 +293,9 @@
                   </span>
                 </p>
                 <p>
-                  "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Repellat voluptatibus cumque dolor ea est quae alias
-                  necessitatibus"
+                  "Ambiente super agradável e os pratos são muito bem
+                  preparados. A sobremesa de morango com kiwi é leve e perfeita
+                  para fechar a refeição!"
                 </p>
               </div>
             </div>
@@ -296,7 +310,7 @@
       <img src="src/images/wave.svg" alt="" />
 
       <div id="footer_items">
-        <span id="copyright"> &copy 2024 Larissa Kich </span>
+        <span id="copyright"> &copy 2025 Zanela </span>
 
         <div class="social-media-buttons">
           <a href="">
